updated to prevent ISO dates from wrapping

--- a/css/zoostyle.css
+++ b/css/zoostyle.css
@@ -784,3 +784,7 @@ A.calLink {
 .highlight {
     background-color: #ff9;
 }
+
+.date {
+    white-space: nowrap;
+}
